# Helium

./: .clang-format  .gitignore  BUILD  CMakeLists.txt  Dockerfile  HELP.md  Purrooser.pyproject  README.md  WORKSPACE  build.ninja  build.zig  build.zig.zon  flux.json  flux.py  linux_cross.txt  main.py  meson.build  package-lock.json  package.json  requirements.txt  tooling.py  tsc  tsconfig.json  win-toolchain.cmake  windows_cross.txt  windows_toolchain.cmake
.github/workflows/: cmake-single-platform.yml  python-app.yml
.idx/: dev.nix
.run/: Bootstrap Unix.run.xml  Bootstrap Win.run.xml  Compile Silent.run.xml  Compile.run.xml  Install Silent.run.xml  Purr.run.xml  Run Purrooser.run.xml  Run Unix Silent.run.xml  Run Unix.run.xml  Run Win Silent.run.xml  Run Win.run.xml
browser/: Light.py  about.html  error.html  index.html  main.py
browser/about/: about.css.map
browser/core/: core.js
browser/error/: error.css.map  error.js  error.scss
browser/kittyGame/: game.js
browser/lib/: std.css  std.css.map
browser/main/: core.css.map  core.js  core.js.map  core.ts
browser/settings/: settings.css.map  settings.js  settings.js.map
browser/weather/: weather.css  weather.css.map  weather.js  weather.ts
build-utils/: build  build.sh  buildforwindows.sh  install  install.star  linux_cc.sh  linux_cc.star  native_build.sh  oldcmake.les  postinstall.star  purr_run.star  run  run.sh  windows_cc.sh  windows_cc.star
build-utils/cross_compile/: linux_cross.txt
core/: Lambda.py  Light.py  __init__.py  http_server.py  main.py  main_window.py
core/lua/: main.lua
src/: Main.cc  Main.cpp  Main.h  Main.hh  Main.hpp  c_wrapper.h  main.py  main.zig  main_window.py  wrapper.cc  wrapper.h
src/Helium/: Helium.cc  Helium.h
src/Purrooser/: Purrooser.cc  Purrooser.cpp  Purrooser.h  Purrooser.hh  Purrooser.hpp
src/Utils/: Utils.cc  Utils.cpp  Utils.h  Utils.hh  Utils.hpp
src/Utils/Actions/: Actions.cc  Actions.cpp  Actions.h  Actions.hh  Actions.hpp  ApplyTheme.cc  CreateNewTab.cc  FullScreenToggle.cc  OnBack.cc  OnCloseTab.cc  OnForward.cc  OnHome.cc  OnNewTab.cc  OnQuit.cc  OnReload.cc  OnSearch.cc  OnSiteError.cc  OnSiteLoaded.cc  OnSiteLoading.cc  OnSiteNavigated.cc  OnStop.cc  OnToggleTheme.cc  ToggleUIElements.cc  Trim.cc
src/Window/: HeliumFrame.cc  HeliumFrame.h  PurrooserFrame.cc  PurrooserFrame.cpp  PurrooserFrame.h  PurrooserFrame.hh  PurrooserFrame.hpp
ui/: about.html  error.html  index.html  kitty.html  settings.html  weather.html
ui/about/: about.css
ui/core/: core.css  core.scss  window.css
ui/error/: error.css
ui/kittyGame/: game.css  game.css.map  game.js.map  game.ts
ui/main/: core.css  core.js  core.js.map  core.scss  core.ts
ui/settings/: settings.css  settings.js  settings.scss  settings.ts
ui/weather/: weather.js  weather.js.map  weather.scss  weather.ts
utility/: build.sh  install.sh  server.sh  start.sh
utils/: build.sh
